# Aleph-w

./: .#copilot.md  .clang-format  .clang-tidy  .clang_complete  .coderabbit.yaml  .gitignore  AGENTS.md  ANALISIS_RAMA_UTILS.md  AStar.H  AUDIT_ADVERSARIAL_BRANCH.md  Aho_Corasick.H  Alpha_Beta.H  Backtracking.H  Bellman_Ford.H  Bidirectional_BFS.H  Blossom.H  Blossom_Weighted.H  Branch_And_Bound.H  Bytecode.H  Bytecode_Interpreter.H  CHANGELOG.md  CHANGELOG_v3.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Compiler_AST.H  Compiler_Backend_C.H  Compiler_CFG.H  Compiler_Dataflow.H  Compiler_Driver.H  Compiler_Driver_Contracts.H  Compiler_Frontend.H  Compiler_Generic_Driver.H  Compiler_HIR.H  Compiler_HIR_Builder.H  Compiler_HIR_Lowering_MVP.H  Compiler_HIR_Model.H  (+786 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
Aleph-w-Doc-English/: Bellman_Ford.H  Dijkstra.H  Floyd.H  Huffman.H  Johnson.H  Karger.H  Kruskal.H  List.H  Map.H  Multimap.H  Multiset.H  Prim.H  Priority_Queue.H  Queue.H  Set.H  Simplex.H  Stack.H  Tarjan.H  Vector.H  ahAlgo.H  ahAssert.H  ahDaemonize.H  ahDefs.H  ahDry.H  ahField.H  ahFunction.H  ahFunctional.H  ahIterator.H  ahMem.H  ahNew.H  ahPair.H  ahSearch.H  ahSort.H  ahTypes.H  ahUtils.H  ah_stdc++_utils.H  al-domain.H  al-matrix.H  al-vector.H  aleph-graph.H  (+181 more)
Examples/: CMakeLists.txt  Imakefile  adversarial_artificial_example.cc  ah_cpp_compat_example.cc  ah_parallel_example.cc  ah_stl_functional_example.cc  aho_corasick_example.cc  alpha_beta_connect3_example.cc  array_utils_example.cc  astar_example.cc  b_tree_example.cc  backtracking_cyclic_graph_example.cc  backtracking_nqueens_example.cc  backtracking_subset_sum_example.cc  bellman_ford_example.cc  bfs_dfs_example.C  bidirectional_bfs_example.cc  bipartite_example.C  bitarray_example.C  bloom_filter_example.C  blossom_example.cc  bplus_tree_example.cc  branch_and_bound_artificial_example.cc  branch_and_bound_assignment_example.cc  branch_and_bound_df_vs_bf_example.cc  branch_and_bound_knapsack_example.cc  btreepic.C  bytecode_example.cc  bytecode_interpreter_example.cc  ca_bench_example.cc  ca_boundary_policies_example.cc  ca_checkpoint_phase17_example.cc  ca_critters_reversible_example.cc  ca_export_example.cc  ca_forest_fire_example.cc  ca_gallery_gen.cc  ca_game_of_life_example.cc  ca_ghost_bench_example.cc  ca_ghost_boundary_showcase_example.cc  ca_ghost_gol_toroidal_example.cc  (+409 more)
Tests/: .clang_complete  CMakeLists.txt  Imakefile  Makefile  Simplex_test.cc  TODO.md  TODO.txt  adversarial_search_test.cc  ah-arena  ah-arena.cc  ah-comb.cc  ah-convert.cc  ah-dry-mixin_test.cc  ah-dry.cc  ah-functional.cc  ah-map-arena_test.cc  ah-mapping_test.cc  ah-stl-functional_test.cc  ah-stl-utils.cc  ah-stl-zip_test.cc  ah-string-utils.cc  ah-uni-functional_test.cc  ah-utils.cc  ah-zip-utils_test.cc  ah-zip.cc  ahAlgo.cc  ahSingleton_test.cc  ahSort_test.cc  ah_arena_exhaustive_test.cc  ah_arena_test.cc  ah_comb_generators_test.cc  ah_concepts_test.cc  ah_cpp_compat_test.cc  ah_date_test.cc  ah_generator_test.cc  ah_init_guard.cc  ah_iterator_test.cc  ah_mapping_test.cc  ah_mdspan_test.cc  ah_mem_test.cc  (+361 more)
Tests/.github/: CODEOWNERS
Tests/build-clang/: CMakeCache.txt
Tests/fuzz/: CMakeLists.txt  README.md  fuzz_checkpoint_loader.cc  fuzz_csv_reader.cc  fuzz_life_parser.cc  fuzz_rle_parser.cc
Tests/fuzz/corpus/csv/: blinker.csv
Tests/fuzz/corpus/life/: blinker_105.life  blinker_106.life
Tests/fuzz/corpus/rle/: glider.rle
bed/: Imakefile  test-DynList.C  tester.H
benchmarks/: CMakeLists.txt  README.md  baseline.json  perf_config.json
benchmarks/ca/: CMakeLists.txt  bench_gol_1024.cc  bench_gray_scott_512.cc  bench_hashlife_breeder.cc  bench_multi_field_lv.cc  bench_parallel_gol.cc  bench_support.H  bench_wolfram_30_1d.cc
benchmarks/containers/: CMakeLists.txt  bench_flat_containers.cc
benchmarks/spatial/: CMakeLists.txt  bench_r_tree.cc
bindings/rust/: .gitignore  Cargo.toml  README.md
bindings/rust/aleph-ca/: Cargo.toml
bindings/rust/aleph-ca-sys/: Cargo.toml  build.rs
bindings/rust/aleph-ca-sys/src/: lib.rs
bindings/rust/aleph-ca/src/: lib.rs
build-asan/: CMakeCache.txt  CTestTestfile.cmake  Simplex_test  ah-convert  ah-mapping_test  ah-uni-functional_test  ah-utils  ahAlgo  ahSingleton_test  ah_date_test  ah_init_guard  ah_mem_test  ah_msg_test  archeap_test  array  arrayheap  arrayheap_algos  avl  bin-node-xt  binheap  bintree  bloom-filter  cmake_install.cmake  dlink_test  dynarray  dynarrayheap  dynskiplist_test  dynslist  fixedqueue  floyd  generate_tree  graph_indexes_test  index-node  k2tree_test  lin-hash  olhash  prefix_tree_test  primes  priority_queue_test  quadtree_test  (+17 more)
cmake/: AlephConfig.cmake.in
consumer/: CMakeLists.txt  main.cc
doc/: funcional.H  graphs.H  hash.H  iterators.H  nets.H  sequences.H  trees.H
docs/: ERROR_HANDLING.md  GEOMETRY_MODULE_GUIDE.md  GITHUB_PAGES_DOXYGEN.md  KOSARAJU_CODE_REVIEW.md  RANGES_GUIDE.md  RED_BLACK_TREES.md  TIKZGEOM_GUIDE.md  adversarial_search_framework.md  aleph_library_improvements.md  algorithm_selection_guide.md  b_tree_family.md  branch_and_bound_framework.md  cellular_automata.en.md  cellular_automata.md  cellular_automata_module.md  ci_sanitizer_policy.md  compiler_frontend_sdk_quickstart.en.md  compiler_frontend_support.en.md  compiler_frontend_support.md  compiler_future_work.en.md  compiler_platform_roadmap.en.md  compiler_platform_roadmap.md  data_structure_thread_safety.md  doxygen_warnings.md  experimental_async_bridge.md  fft-tutorial.en.md  (+12 more)
python/: CMakeLists.txt  README.md  pyproject.toml
python/aleph_ca/: __init__.py
python/notebooks/: 01_intro.py  README.md
python/src/: bindings.cc
python/tests/: conftest.py  test_basic.py  test_callbacks.py  test_checkpoint.py  test_numpy_interop.py  test_perf.py
reproductions/: .gitignore  CMakeLists.txt  README.md  btw_sandpile.cc  ca_reproduction_support.H  drossel_schwabl.cc  game_of_life_bench.cc  gray_scott_patterns.cc  plot_btw.gp  plot_drossel_schwabl.gp  schelling_segregation.cc
(+145 files in other folders)
